<resources>
    <string name="vibrite_meter">振动仪</string>
    <string name="start_test">开始测试</string>
    <string name="stop_test">停止测试</string>
    <string name="test_data">测量数据</string>
    <string name="finish">完成</string>
    <string name="mode">测量模式</string>
    <string name="connection_state">连接状态</string>
    <string name="disconnected">未连接</string>
    <string name="connected">已连接</string>
    <string name="battery_state">电池电量</string>
    <string name="vibrite_searching">正在搜索振动仪</string>
    <string name="vibrite_connect">连接振动仪</string>
    <string name="vibrite_read_timeout">写数据超时</string>
    <string name="vibrite_read_timeout2">写数据超时，请检查设备连接情况！</string>
</resources>
