<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp_5"
    android:paddingBottom="@dimen/dp_10"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="@dimen/dp_50"
    android:layout_marginLeft="@dimen/dp_20"
    android:background="@color/white"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="250dp"
            android:layout_height="35dp"
            app:key="@string/vibrite_meter"
            app:content_value="@string/disconnected"
            app:key_width="100dp"
            app:key_size="14"
            app:content_size="16"
            app:content_color="@color/textColorblack"
            app:bold="true"
            android:id="@+id/viberStatus"
            android:tag="viberStatus" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_device_disconnect"
            android:padding="@dimen/dp_5"
            android:id="@+id/viberStatusIv"
            android:tag="viberStatusIv" />
    </LinearLayout>
    <include layout="@layout/ly_line_light"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="250dp"
            android:layout_height="30dp"
            app:key="@string/battery_state"
            app:key_width="100dp"
            app:key_size="14"
            app:content_size="16"
            app:content_color="@color/textColorlightblack"
            android:id="@+id/viberBattery"
            android:tag="viberBattery" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_battery4"
            android:scaleType="centerInside"
            android:padding="@dimen/dp_5"
            android:id="@+id/viberBatteryStatusIv"
            android:tag="viberBatteryStatusIv" />
    </LinearLayout>
    <include layout="@layout/ly_line_light"/>
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/mode"
            android:textColor="@color/textColorblack"
            android:textSize="@dimen/fontSize_14sp"
            android:id="@+id/viberModeText"
            android:tag="viberModeText"
            android:gravity="center_vertical"
            />
        <Spinner
            android:layout_width="200dp"
            android:paddingLeft="@dimen/dp_10"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:id="@+id/viberModeSpinner"
            android:tag="viberModeSpinner"
            android:entries="@array/viberModes"
            />
    </LinearLayout>
    <!--<com.supcon.mes.mbap.view.CustomSpinner-->
        <!--android:layout_width="280dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:id="@+id/viberModeSpinner"-->
        <!--android:tag="viberModeSpinner"-->
        <!--app:key="测量模式"-->
        <!--app:key_size="14"-->
        <!--app:content_size="14"-->
        <!--app:text_width="80dp"-->
        <!--app:content_value="位移模式"-->
        <!--/>-->
    <include layout="@layout/ly_line_light"/>
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="@dimen/dp_50"
        >
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="250dp"
            android:layout_height="45dp"
            app:key="@string/test_data"
            app:key_width="100dp"
            app:key_size="14"
            app:content_size="32"
            app:bold="true"
            app:content_color="@color/textColorblack"
            android:id="@+id/viberData"
            android:tag="viberData" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="mm"
            android:id="@+id/viberDataUnit"
            android:tag="viberDataUnit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_5"
            />
    </RelativeLayout>
    <include layout="@layout/ly_line_light"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical|right"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/start_test"
            android:id="@+id/viberBtn"
            android:tag="viberBtn"
            android:textColor="@color/line_gray"
            android:textSize="@dimen/fontSize_16sp"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/finish"
            android:id="@+id/viberFinishBtn"
            android:tag="viberFinishBtn"
            android:textColor="@color/customBlue4"
            android:textSize="@dimen/fontSize_16sp"
            />

    </LinearLayout>

</LinearLayout>

